--- a/creating_diverse_inclusive_communities.adoc
+++ b/creating_diverse_inclusive_communities.adoc
@@ -46,7 +46,7 @@ They are also increasingly likely to be their homes' primary earners, and they'r
 As a result, they have less spare time to do even more unpaid work by contributing to open source.
 When they do make those contributions, it's often because they already work for organizations that let them do so during work hours.
 
-Nisha Kumar (she/they) is the technical lead for container build, packaging, and distribution at the Open Source Technology Center at VMware.
+Nisha Kumar (She/They) is the technical lead for container build, packaging, and distribution at the Open Source Technology Center at VMware.
 She also serves as co-maintainer for the Tern project, and a contributor to the SPDX and OCI communities.
 She juggles these projects with raising her 2-year-old child as his primary caregiver.
 To Kumar, these dual roles are nothing new: As a girl growing up in India, she balanced schoolwork with chores, running errands, and caring for family members.
@@ -66,7 +66,7 @@ And this data was collected pre-2020.
 
 This year's confluence of a global pandemic and mass civil unrest has led to increased attacks against people of color, specifically Asian Americans and Black Americans.
 If attackers feel emboldened to hurt people in the flesh, it's no surprise that this https://www.nytimes.com/2020/07/11/business/media/tucker-carlson-writer-blake-neff.html[occurs online] as well.
-If you work on open source projects with Black and Asian contributors, make no mistake: They are in pain.
+If you work on OS projects with Black and Asian contributors, make no mistake: They are in pain.
 
 "I don't see any acknowledgement that the Internet, in general, is mostly inhabited by white men who are hostile to women and URMs," Kumar says.
 "How would anyone expect folks who are in general harassed on the internet to suddenly trust an open source community to not behave the same way towards them, despite what its Code of Conduct document says?"
@@ -77,10 +77,10 @@ For years, project maintainers have written calls for help, saying they "feel dr
 A 2017 survey of 6,000 GitHub contributors found that 21% left projects they were working on after experiencing negative behavior.
 With the odds of such behavior that much higher for minorities, it's surprising they contribute to open source at all.
 
-"Any time that I spend contributing to [open source] is time I could also be spending volunteering to advance LGBTQ equality, fighting against police brutality, and other issues that I care about, and that disproportionally affect underrepresented people—in fact, it's what makes us underrepresented in the first place," explains Perry Eising (he/they), who works as a community manager at a for-profit tech company that hosts open source projects.
+"Any time that I spend contributing to [open source] is time I could also be spending volunteering to advance LGBTQ equality, fighting against police brutality, and other issues that I care about, and that disproportionally affect underrepresented people—in fact, it's what makes us underrepresented in the first place," explains Perry Eising (He/They), who works as a community manager at a for-profit tech company that hosts open source projects.
 "It's challenging to justify to myself to spend time being involved in (sometimes hostile feeling) OS and tech debates when I have so many causes that require my attention and efforts."
 
-=== Lackluster documentation
+=== Incomplete, inadequate documentation
 
 The barriers above manifest in perhaps the biggest of all: OS projects' lack of documentation.
 Quantitative data and qualitative interviews repeatedly share that most OS projects don't prioritize or reward documentation.
@@ -92,7 +92,7 @@ So, you can imagine how my face fell when I created my first GitHub account, log
 With no knowledge of how to fork, merge branches, or make pull requests, I had no clue where to start—and knew the margin for error was high.
 I'm fortunate to live in a city with an active tech community that hosts regular meetups for techies of all interests, including tutorials aimed at beginners.
 I made my first pull request in person at a conference, and then made most of my first several dozen GitHub contributions at in-person events.
-It took attending several events over several months for free that I could access for me to start contributing independently.
+It took attending multiple free, accessible events over several months for me to start contributing independently.
 Absent any of these privileges, I would not have spent hours alone trying to learn how GitHub works to make a PR that might or might not get accepted.
 
 The same GitHub survey which found that 1 in 5 open source contributors leave due to bad behavior also found that incomplete/confusing documentation was the biggest challenge. 93% of that survey’s respondents said they had encountered the problem, yet 60% said they rarely or never contributed to documentation.
@@ -100,15 +100,16 @@ As a result, it's hard for project veterans to read their projects' docs.
 
 Imagine how this makes outsiders feel.
 
-"Contributing to open source is not only a technical challenge but equally a social challenge," explains Nuritzi Sanchez (she/her), a senior open source program manager at GitLab.
+"Contributing to open source is not only a technical challenge but equally a social challenge," explains Nuritzi Sanchez (She/Her), a senior open source program manager at GitLab.
 "Documentation is needed to enable remote asynchronous collaboration, which is how communities work.
 If everything is stuck inside of people’s heads, that’s going to create an atmosphere of confusion, frustration, and inefficiency."
+Documentation isn't just essential for code: It's also a guide to understand each project's cultural and communication norms. Open source communities use asynchronous communication to work cohesively across disparate time zones. Without clear documentation, prospective contributors won't know how decisions are made, where to contribute to the project, how teams collaborate, or why it's important to follow certain processes. For prospective contributors who are non-native English speakers and/or have special needs, this lack of documentation makes contributing all but impossible. 
+Inadequate documentation has far-reaching consequences. It shows a lack of transparency that wastes time, sows distrust, and prevents OS communities from reaching their full potential.
 
-[PARA - Nuritzi and/or Zach]
 
-== Tips for building more inclusive projects and communities
+== Tips to build more inclusive projects and communities
 
-Despite these barriers to entry, there's good news for maintainers: You hold enormous power to improve your project.
+Despite these barriers to entry, there's good news for maintainers: You hold enormous power to improve your project's culture by making it more inclusive.
 Community members, especially those of minority status, have discussed the lack of diversity and inclusion for years.
 Now, it's time for project maintainers to act by weaving inclusion throughout their project strategies - not making it an afterthought years later.
 "[Diversity and inclusion] keynotes might have lofty ideals designed to raise awareness and some might even argue that they were useful at one point (maybe), but we've moved beyond that," argues Lisa-Marie Namphy [She/Her], who runs Cloud Native Containers, the world's largest Cloud Native Computing Foundation (CNCF) user group.
@@ -119,6 +120,7 @@ If creating an inclusive community sounds overwhelming, remember that the commun
 If you're a project maintainer yourself, you don't have to do this work alone.
 In fact, taking the steps below with a trusted team will help improve your project for all.
 
+
 == 1. Stop saying you're a meritocracy
 
 The first step to a more inclusive open source project involves bursting the meritocracy bubble: The more you believe in meritocracy, the more biased your project is https://www2.deloitte.com/au/en/blog/diversity-inclusion-blog/2019/meritocracy-unraveling-paradox.html[likely to be].
@@ -126,15 +128,16 @@ The first step to a more inclusive open source project involves bursting the mer
 Why? Purely meritocratic projects https://gap.hks.harvard.edu/paradox-meritocracy-organizations[don't acknowledge] that people enter on unequal playing fields.
 If an open source maintainer isn't aware that women often  have less time to contribute, or that LGBTQ+ contributors are more likely to endure online abuse, they won't take steps to make the community more inclusive.
 As a result, they risk losing the diverse contributors they worked hard to recruit.
-Terri Oda (She/Her) volunteers for the Python Software Foundation and Google's Summer of Code alongside her role as an open source security researcher at Intel, says claims of meritocracy make her cringe.
-She says they cause maintainers to ignore opportunities to get more people involved in projects, even in cases where the open source community gathers in person.
+Terri Oda (She/Her) volunteers for the Python Software Foundation and Google's Summer of Code alongside her role as an open source security researcher at Intel. She says claims of meritocracy make her cringe.
+Why? Such statements cause maintainers to ignore opportunities to get more people involved in projects, even in cases where the open source community gathers in person.
 "For example, say you're running code sprints at a conference and want to increase the number of women," Oda says.
 "If you're thinking about merit and skills, you're going to wind up offering more intro-to-sprinting type content or whining about the university pipeline.
 But if you look at the bigger picture, you might realize that the conference offers childcare during the main conference, but it stops when sprints start.
 Or that the venue isn't in a safe area and the sprints run until after dark."
 The first step to build a more inclusive environment is self-awareness.
 Open source contributors enter projects with a range of lived experiences that affect how -- and if -- they show up.
-Sitting with and reflecting on this fact is the first, most crucial step.
+Sitting with and reflecting on this fact is the first, most crucial step.The next step is to take an honest look at your OS project's current community, and take note of who is -- and isn't -- there. If your project contributors all, or even mostly, look like you, that's a huge red flag that an inclusive overhaul is in order. 
+
 
 === 2. Prioritize your project's documentation
 
@@ -148,25 +151,24 @@ One of my least favorite dismissive phrases: 'It's just a pile of Markdown.'
 If only it were that easy! Documentation is code for an environment where no chipsets are identical; kernel defaults are hostile; RAM is variable; storage is subject to random external dependencies; and production regularly fails despite optimal conditions, or inversely, succeeds in spite of obvious CI failures."
 To track progress, the SIG Docs group does a quarterly review where they measure the progress of their previous quarter's goals and prioritize work for the upcoming quarter. One of their community rules centers on ownership: In order to adopt a goal, a project needs a specific person willing to drive it. That creates even more onus on contributors to find new contributors. 
 
-=== 3. Reward OS contributions beyond code
 
-Give your community open and private options to leave feedback on their experiences.
-This can range from quarterly surveys to giving contributors the freedom to create channels in the project's Slack, Discourse, etc.
-chat about mental health, being a person of color, how to handle negotiations, etc.
-
-=== 4. Create and enforce a clear Code of Conduct
+=== 3. Create and enforce a clear Code of Conduct
 
 If your OS project doesn't already have a Code of Conduct (CoC), it's never too late to make one.
 They are an expectation for modern OS initiatives, from long-term projects to two-day conferences.
 In my own research for this chapter, several OS contributors said they won't consider joining new projects that lack clear CoCs; for these URMs, the risk of joining an unwelcoming if not hostile community is too high.
+"Having a code of conduct would be big for me," explains Natalie Zamani (She/Her), Senior Software Engineer at Apple. "And then something as seemingly unrelated as not tolerating project contributors espousing racist/sexist/homophobic/transphobic ideas, even if it’s not related to their project work. I wouldn’t feel comfortable working with individuals who hold such views, full stop. And I’ve seen a few projects that would otherwise be interesting to me where that’s tolerated."
 
 As the former President and Chairperson of the Board of Directors for the GNOME Foundation, Sanchez helped create GNOME's event CoC. She says that while the Contributor’s Covenant is the default Code of Conduct for a lot of OS communities, translating it to an events format took some creative work - and a lot of feedback from the GNOME community.
 "No matter the type of CoC you’re rolling out, having a transparent plan and timeline is key," Sanchez says. "At GNOME, we created a working group after one of our annual conferences to start drafting a code of conduct. We passed the notion of a working group by the Board of Directors to make sure that they were onboard. They made a community-wide announcement letting people know the process: a working group would be drafting the CoC, sending to community for revisions, the Board would then see the revised draft and vote, and then the membership would vote at the Annual General Meeting."
-Despite the key role of community feedback, Sanchez says the CoC should be owned by a governing body within your OS project. CoCs remain a touchy subject in OS communities, and not all OS contributors believe they're necessary. A governing body (or at least a committee) that's comprised of diverse contributors and shares the creation process can help alleviate disagreements. Once you've created your governing body, assign members to own specific tasks. These include a Chair who can break voter ties, moderators to enforce the Code of Conduct, and mentors to train the community. 
 
-=== 5. Reward OS contributions beyond code
+Despite the key role of community feedback, Sanchez says the CoC should be owned by a governing body within your OS project. CoCs remain a touchy subject in OS communities, and not all OS contributors believe they're necessary. A governing body (or at least a committee) that's comprised of diverse contributors and shares the creation process can help alleviate disagreements. Once you've created your governing body, assign members to own specific tasks. These include a Chair who can break voter ties, moderators to enforce the Code of Conduct, and mentors to train the community. It's essential for all community members -- especially URMs -- to see that project leads protect their safety and integrity.
+"I am a firm believer that signalling is very important, but that broken trust is difficult to repair," Eising explains. "Don't signal to minorities that you are ready to embrace them before you actually are - that's like inviting someone who uses a wheelchair to a party on the first floor with no elevator. That person won't trust you again to think about your needs appropriately. Organizations need to look within and really assess before making a reach out."
 
-In her time working on open source, Sanchez says that most projects focus on attracting a narrow set of contributors: Engineering, Design, Translation, Documentation, and Outreach. Despite how broad that sounds, she says she'd like to see a lot more roles and contributions be rewarded:
+
+=== 4. Reward OS contributions beyond code
+
+In her time working on open source, Sanchez says that most projects focus on attracting a narrow set of contributors: Engineering, Design, Translation, Documentation, and Outreach. Despite how broad that sounds, she'd like to see a lot more roles and contributions be rewarded:
 
 Career Development Target
 Teams within OSS orgs to check out
@@ -199,17 +201,22 @@ HR/People
 Board of Directors, community team, newcomers initiatives 
 We need people who care about people and want to make the community awesome. This helps with newcomers initiatives and lowering the barrier of entry, as well as retention. It also may help the community gain better communication practices. 
 
-=== 6. Identify new talent to grow and lead the project
+This list isn't exhaustive, nor is it applicable to all projects. The goal is to look at your own OS project's holistic needs in the short and long terms, then recruit contributors to fill specific gaps. Doing so allows you to create a governing board with representatives that own specific aspects of the project and contribute to its growth. 
+Nithya Ruff (She/Her) leads the Open Source Program Office for Comcast and serves as Chair of the Linux Foundation board. In more than two decades of open source work, she has seen how ignoring crucial skills -- including legal issues such as copyrights and trademarks - can keep a project from achieving long-term success. Recruiting and rewarding diverse contributions also plays a key role in preventing burnout, which project maintainers have been increasingly vocal about. 
+"It is unfair to expect the maintainer or the developer who started the project or leads the project to care for all of these issues, [or] have the skills to do it," Ruff says. "All forms of contribution need to be valued [because this] brings diversity of people into the project, which makes the project more vibrant and innovative. Foundations like the Apache Software Foundation, Linux Foundation bring all of these contributions to the table for their hosted projects. This allows the project to more successfully build a broader ecosystem."
 
-"Another reason for acknowledging and including all forms of contribution is to prevent maintainer burnout.
- It is unfair to expect the maintainer or the developer who started the project or leads the project to care for all of these issues.
- Or to have the skills to do it." - Nithya Ruff
+
+=== 5. Mentor new talent to grow and lead the project
+
+[PARA]
+
 "My open source contributions definitely changed even before I became a parent: as the coordinator for a global mentoring program that happens in the summer, I had to plan some years ahead to build a volunteer team that could do everything I do.
  handed off some of my other projects more completely and never went back to them.
  Since new moms typically get less than 1hr of free time per day, the key for me has been aligning the open source I want to do with the open source that work wanted to pay me for.
 I worked to take CVE Binary Tool open source after I returned from maternity leave, and worked with my boss to make sure I could have time to mentor students as part of my maintainer role."
 
-=== 7. Engage your community directly
+
+=== 6. Commit to continuous improvement
 
 Give your community open and private options to leave feedback on their experiences.
 This can range from quarterly surveys to giving contributors the freedom to create channels in the project's Slack, Discourse, etc. chat about mental health, being a person of color, how to handle negotiations, etc.
@@ -217,6 +224,7 @@ This can range from quarterly surveys to giving contributors the freedom to crea
 "I am hearing-impaired, and I requested that the All Things Open Conference consider that when in larger venues where keynotes were speaking and there were no specific adaptations for those of us who were not able to hear.
 I was particularly impressed when attending the Creative Commons Global Summit in Toronto 2018 where nearly all presentations were accompanied by folks who signed and also provide simultaneous closed captioning of all speakers.
 (That was very helpful.)"—Don Watkins
+
 
 == Conclusion
 
